@@ -41,7 +41,7 @@ export BCLD_DATE="$(/usr/bin/date +'%d-%b-%Y')"
 export BCLD_DEFAULT_URL='https://www.google.com/'
 export BCLD_HOME='/root'
 export BCLD_MD5="./test/bcld.md5"
-export BCLD_PATCH='0' # Changes with every major feature update
+export BCLD_PATCH='1' # Changes with every major feature update
 export BCLD_RELEASE='13.5'
 export BCLD_REPO_BRANCH='main'
 export BCLD_TERM='xterm-256color'
