@@ -1,116 +1,116 @@
 d0bdcbc66c943f95d94094510a7225f8  ./.github/workflows/release.yml
-e2caa447a472cd4b319fdb6d68f7093f  ./.gitignore
-4a6fa59b1c01aecca6b7504953723f01  ./.gitmodules
-a83cf2b3588d3f40c030aae6e1528ba6  ./CHANGELOG
-04aff3cce210e9c2a8f21df593f07b19  ./COPYING
-5f630c45a220e988d7c6cb643575f3a0  ./Docker-builder.sh
-d221c605820660f1d244c6213e28d08b  ./IMG-builder.sh
-ea29c0147a158039c0851426ae8acff4  ./ISO-builder.sh
-cc04d3c28306689fde5be96638e22f70  ./LICENSE
-58430fdce41cb00a87eb88ebee58fef0  ./README.md
-77a9103c2abf925fda8dfe8ac8575bdb  ./RepoMan.sh
-53712c37e5d406d6e2396d0133c63e0a  ./assets/BCLD_FLOW.png
 b70ef6c6e2ba24acef78d533b2bca185  ./assets/ISO_BUILDER_FLOW.png
+53712c37e5d406d6e2396d0133c63e0a  ./assets/BCLD_FLOW.png
 5ee37144e15f8bf49e7f683935a27f15  ./assets/bcld-logo.png
-ef446702fb62fe502fc67c370a5a11fa  ./config/BUILD.conf
+2c51bfd13335d98ab24fbef4a9608b34  ./config/trap_shutdown/net-warning/net-warning-3.png
+263e16384c311f85d98b1987348e6241  ./config/trap_shutdown/net-warning/net-warning-1.png
+6816416e74eafef1fbb668dfdc0a2c0d  ./config/trap_shutdown/net-warning/net-warning-2.png
+71c358b064341a5c5854c979e8260aa5  ./config/trap_shutdown/net-warning/net-warning-4.png
+b38a766499eb807c28c679eebd6383c2  ./config/trap_shutdown/net-warning/net-warning-5.png
+7c4822134a15d222e520220f2bdd21b2  ./config/trap_shutdown/net-warning/net-warning-6.png
+d1c35183e79c3e4b5d88acd76ce7384d  ./config/trap_shutdown/virt-warning/virt-warning-2.png
+49417e644296c2a5c9dbc5f8c805452e  ./config/trap_shutdown/virt-warning/virt-warning-6.png
+fa8a98573721ffd92ce67d9fcc5dfec9  ./config/trap_shutdown/virt-warning/virt-warning-1.png
+15d364fd27c909096b5c6e41f12ef66b  ./config/trap_shutdown/virt-warning/virt-warning-4.png
+0f5e199c4b7ac8fe87ba8e81fdfb2a5f  ./config/trap_shutdown/virt-warning/virt-warning-3.png
+bc8d4c92bdbadd1c62c088184f39073f  ./config/trap_shutdown/virt-warning/virt-warning-5.png
+1f77666b2f4e62b322c6aa6be33ebf5a  ./config/trap_shutdown/trap_shutdown.sh
+3245df1356b943b80ce9dfbeb32e1ca6  ./config/trap_shutdown/param-warning/param-warning-2.png
+cc387c1caf8496805c4ca8eb0b649abb  ./config/trap_shutdown/param-warning/param-warning-4.png
+f2c0e8ab771428f9d59400ad4fd51c95  ./config/trap_shutdown/param-warning/param-warning-5.png
+5febda87066e1f973de3e39209ea1b2b  ./config/trap_shutdown/param-warning/param-warning-6.png
+6e15f00615f2a89d2ab9436bc0927b4b  ./config/trap_shutdown/param-warning/param-warning-3.png
+26c1ab1051798d4aa320ce4dab3eab4f  ./config/trap_shutdown/param-warning/param-warning-1.png
+b11be49e5fb596a28c7b4fcb19f808d9  ./config/qutebrowser/config.py
+473147208a95ca198eacef9df28c76db  ./config/BUILD.conf
+d93c0ecfa96fe619d9503decf1193dd3  ./config/openbox/rc.xml.debug
+818e728f1804c52e2abb09cbf0fe364c  ./config/openbox/rc.xml
+6e2f77bbba38b224e732db10952118a1  ./config/openbox/autostart
+3b817e042342ec45513275941356c821  ./config/apt/sources.list
+1b98525005b32bb69b3ab90e213c6492  ./config/casper/casper.conf
+96118326a47f2ce117c668bdf25c726d  ./config/bash/environment
+46a6263e8afa041ca10eeadd7795cb81  ./config/iptables/iptables.firewall.rules.test
+1c15609dca974842113ed8e3abea9e9f  ./config/iptables/iptables.firewall.rules.debug
+c489c87b382083ef1d0c9d348b8d5f86  ./config/iptables/iptables.firewall.rules
+4cdf5d41c62ed81eb3dbc645f830db11  ./config/systemd/system.conf.d/00_uBCLD_system
+286e5936f4473a02157f8bd446cb66b7  ./config/systemd/system/getty@tty1.service.d/override.conf
+7a5ecb8247b0e598ca80639cea6fd885  ./config/systemd/system/systemd-udevd.service.d/override.conf
+3a23fc9fc810561bdc610a8b3160efe0  ./config/systemd/system/BCLD-USB.service
+49cf83881ca5da5e3aca9c3f55c0c3ba  ./config/systemd/system/BCLD-crosdump.service
+c4ca4238a0b923820dcc509a6f75849b  ./config/systemd/shm/removable
+a69edad4dcdbc0ef94a36fc32f993124  ./config/plymouth/bcld-plymouth.png
+df80acf8fb77a47a342b0862308d4ed4  ./config/plymouth/spinner.plymouth
+c99677e6deb495fb2b90cbfb84ac7349  ./config/udev/rules.d/BCLD-USB.rules
+767f3efa0b728ddf93b81878e80ec8ee  ./config/grub/grub.cfg.iso
+62934d316a6c087f4d961feb2895f70a  ./config/grub/grub.cfg.img
+012691178b3f515cde6d073cff84b89c  ./config/grub/.disk/release_notes_url
+a79dbb95a5b6b488d23c4ff70fad25c5  ./config/grub/.disk/cd_type
+d41d8cd98f00b204e9800998ecf8427e  ./config/grub/.disk/base_installable
+7744f57495e19ee51aa0d9ec66e3fb2d  ./config/grub/.disk/casper-uuid-generic
+78c908f9f98459b21ca703c224b13ff1  ./config/rsyslog/60-BCLD-rsyslog.conf
+751c3f326e9d9febc14ef0f884b61087  ./config/bcld/bcld.cfg
+ab23e76d42c8177569124b709cf36a10  ./config/modprobe/alsa-base.conf
+d5fa17464f6a8520b0fc28a2731b053c  ./config/modprobe/blacklist.conf
+dc9ce4b257ebd2d13ef23c9b74d5d197  ./config/packages/NVIDIA
+2823f70dc4a1a33e70cccc2d2f7ffcd4  ./config/packages/TEST
+e7c3341206da6e77bfed1923d6a11883  ./config/packages/selections.conf
+c4a2d192d8ebf94613ef3a0ba42db160  ./config/packages/REQUIRED
+374480d37890b60da24eda7c90bf7b57  ./config/packages/DEBUG
+6c224b812083575965b9bf1aca105231  ./config/packages/REMOVE
+c4194d2bde957994fa74aaa13bc8333e  ./config/packages/VIRTUAL
+0eacc137d0587f9cac7454c98412c2e8  ./config/packages/BUILD
+d57cf84974e9a959d64a38710983a18d  ./config/packages/APP
+335cd24f955359c232ece20790776c3d  ./config/packages/KERNEL
+9832a7e88354fe265cfcfe3324542337  ./config/profile.d/10-BCLD.sh
+98230f0794ee06f1899c3fd3c9f3f4d3  ./config/network-manager/interfaces
+5b19b43c2beaa7bcdf82ef510a4514ea  ./config/network-manager/conf.d/default-wifi-powersave-on.conf
+1b327f0daaf44a643bf8e08af4842922  ./config/network-manager/NetworkManager.conf
+9f5fd90d71fcba2be63627e80f5f7392  ./config/X11/xterm/XTerm.white
+8b637a6c1eb44c49740a1a2d569fe4ad  ./config/X11/xterm/XTerm.black
 9cba1a18fda70d1aa9ea3de9c7572d3e  ./config/X11/Xbindkeys/.xbindkeysrc
 50dd37371765f9cc60f1ff44b21c7647  ./config/X11/Xmodmap/.Xmodmap
 5bd6e2b4f3d441147adffa8bb288b1ea  ./config/X11/xorg.conf.d/20-intel.conf
 12e8a46bb563daf82e8ce5fc143cf69b  ./config/X11/xorg.conf.d/80-bcld-basic.conf
-1dd0fe36979d5936d50b4b6065a41437  ./config/X11/xorg.conf.nvidia/30-nvidia.conf
 cfc9284e73df9db03f57d490adfa71a2  ./config/X11/xorg.conf.test/99-bcld-disable-kiosk.conf
-8b637a6c1eb44c49740a1a2d569fe4ad  ./config/X11/xterm/XTerm.black
-9f5fd90d71fcba2be63627e80f5f7392  ./config/X11/xterm/XTerm.white
-3b817e042342ec45513275941356c821  ./config/apt/sources.list
-96118326a47f2ce117c668bdf25c726d  ./config/bash/environment
-751c3f326e9d9febc14ef0f884b61087  ./config/bcld/bcld.cfg
-1b98525005b32bb69b3ab90e213c6492  ./config/casper/casper.conf
-d41d8cd98f00b204e9800998ecf8427e  ./config/grub/.disk/base_installable
-7744f57495e19ee51aa0d9ec66e3fb2d  ./config/grub/.disk/casper-uuid-generic
-a79dbb95a5b6b488d23c4ff70fad25c5  ./config/grub/.disk/cd_type
-012691178b3f515cde6d073cff84b89c  ./config/grub/.disk/release_notes_url
-62934d316a6c087f4d961feb2895f70a  ./config/grub/grub.cfg.img
-767f3efa0b728ddf93b81878e80ec8ee  ./config/grub/grub.cfg.iso
-c489c87b382083ef1d0c9d348b8d5f86  ./config/iptables/iptables.firewall.rules
-1c15609dca974842113ed8e3abea9e9f  ./config/iptables/iptables.firewall.rules.debug
-46a6263e8afa041ca10eeadd7795cb81  ./config/iptables/iptables.firewall.rules.test
-ab23e76d42c8177569124b709cf36a10  ./config/modprobe/alsa-base.conf
-d5fa17464f6a8520b0fc28a2731b053c  ./config/modprobe/blacklist.conf
-1b327f0daaf44a643bf8e08af4842922  ./config/network-manager/NetworkManager.conf
-5b19b43c2beaa7bcdf82ef510a4514ea  ./config/network-manager/conf.d/default-wifi-powersave-on.conf
-98230f0794ee06f1899c3fd3c9f3f4d3  ./config/network-manager/interfaces
-6e2f77bbba38b224e732db10952118a1  ./config/openbox/autostart
-818e728f1804c52e2abb09cbf0fe364c  ./config/openbox/rc.xml
-d93c0ecfa96fe619d9503decf1193dd3  ./config/openbox/rc.xml.debug
-d57cf84974e9a959d64a38710983a18d  ./config/packages/APP
-0eacc137d0587f9cac7454c98412c2e8  ./config/packages/BUILD
-374480d37890b60da24eda7c90bf7b57  ./config/packages/DEBUG
-335cd24f955359c232ece20790776c3d  ./config/packages/KERNEL
-dc9ce4b257ebd2d13ef23c9b74d5d197  ./config/packages/NVIDIA
-6c224b812083575965b9bf1aca105231  ./config/packages/REMOVE
-c4a2d192d8ebf94613ef3a0ba42db160  ./config/packages/REQUIRED
-2823f70dc4a1a33e70cccc2d2f7ffcd4  ./config/packages/TEST
-c4194d2bde957994fa74aaa13bc8333e  ./config/packages/VIRTUAL
-e7c3341206da6e77bfed1923d6a11883  ./config/packages/selections.conf
+1dd0fe36979d5936d50b4b6065a41437  ./config/X11/xorg.conf.nvidia/30-nvidia.conf
 1540737da39ba1e9ca293b7b895c4ff9  ./config/pam/login
-a69edad4dcdbc0ef94a36fc32f993124  ./config/plymouth/bcld-plymouth.png
-df80acf8fb77a47a342b0862308d4ed4  ./config/plymouth/spinner.plymouth
-9832a7e88354fe265cfcfe3324542337  ./config/profile.d/10-BCLD.sh
-b11be49e5fb596a28c7b4fcb19f808d9  ./config/qutebrowser/config.py
-78c908f9f98459b21ca703c224b13ff1  ./config/rsyslog/60-BCLD-rsyslog.conf
-c4ca4238a0b923820dcc509a6f75849b  ./config/systemd/shm/removable
-4cdf5d41c62ed81eb3dbc645f830db11  ./config/systemd/system.conf.d/00_uBCLD_system
-3a23fc9fc810561bdc610a8b3160efe0  ./config/systemd/system/BCLD-USB.service
-49cf83881ca5da5e3aca9c3f55c0c3ba  ./config/systemd/system/BCLD-crosdump.service
-286e5936f4473a02157f8bd446cb66b7  ./config/systemd/system/getty@tty1.service.d/override.conf
-7a5ecb8247b0e598ca80639cea6fd885  ./config/systemd/system/systemd-udevd.service.d/override.conf
-263e16384c311f85d98b1987348e6241  ./config/trap_shutdown/net-warning/net-warning-1.png
-6816416e74eafef1fbb668dfdc0a2c0d  ./config/trap_shutdown/net-warning/net-warning-2.png
-2c51bfd13335d98ab24fbef4a9608b34  ./config/trap_shutdown/net-warning/net-warning-3.png
-71c358b064341a5c5854c979e8260aa5  ./config/trap_shutdown/net-warning/net-warning-4.png
-b38a766499eb807c28c679eebd6383c2  ./config/trap_shutdown/net-warning/net-warning-5.png
-7c4822134a15d222e520220f2bdd21b2  ./config/trap_shutdown/net-warning/net-warning-6.png
-26c1ab1051798d4aa320ce4dab3eab4f  ./config/trap_shutdown/param-warning/param-warning-1.png
-3245df1356b943b80ce9dfbeb32e1ca6  ./config/trap_shutdown/param-warning/param-warning-2.png
-6e15f00615f2a89d2ab9436bc0927b4b  ./config/trap_shutdown/param-warning/param-warning-3.png
-cc387c1caf8496805c4ca8eb0b649abb  ./config/trap_shutdown/param-warning/param-warning-4.png
-f2c0e8ab771428f9d59400ad4fd51c95  ./config/trap_shutdown/param-warning/param-warning-5.png
-5febda87066e1f973de3e39209ea1b2b  ./config/trap_shutdown/param-warning/param-warning-6.png
-1f77666b2f4e62b322c6aa6be33ebf5a  ./config/trap_shutdown/trap_shutdown.sh
-fa8a98573721ffd92ce67d9fcc5dfec9  ./config/trap_shutdown/virt-warning/virt-warning-1.png
-d1c35183e79c3e4b5d88acd76ce7384d  ./config/trap_shutdown/virt-warning/virt-warning-2.png
-0f5e199c4b7ac8fe87ba8e81fdfb2a5f  ./config/trap_shutdown/virt-warning/virt-warning-3.png
-15d364fd27c909096b5c6e41f12ef66b  ./config/trap_shutdown/virt-warning/virt-warning-4.png
-bc8d4c92bdbadd1c62c088184f39073f  ./config/trap_shutdown/virt-warning/virt-warning-5.png
-49417e644296c2a5c9dbc5f8c805452e  ./config/trap_shutdown/virt-warning/virt-warning-6.png
-c99677e6deb495fb2b90cbfb84ac7349  ./config/udev/rules.d/BCLD-USB.rules
-87ecdd57738b7ed7fe23e3da8a492593  ./image/ISO/README.diskdefines
-c12303174bde6f01a906e5bcd1651345  ./image/ISO/isolinux/isolinux.bin
-49a4210f52e5bcc79077d12c3dfd63f5  ./image/ISO/isolinux/isolinux.cfg
+d17592b1867453e7e203d9d13b2251e4  ./tools/DOCKER-install.sh
+853ffb8a5e4bea6c1b108f07157924c0  ./tools/NEXUS-deploy.sh
+b2efb8301a641d647193859319e27a71  ./tools/HashGen.sh
+bc8d6f1036b0463c7f1703414b04f691  ./tools/bcld-repo-manager/generate_release.sh
+0a430cdd84ba79567389d5440f23a3ba  ./tools/bcld-repo-manager/chrepoman.sh
+2c29eaacba101e914e4bb3521a6eff84  ./tools/bcld-repo-manager/repository_manager.sh
+7d874e194ead3b20adcf839a09edc38d  ./tools/EXPORTER-TOOLKIT.sh
 f1a30a681a41d6494dc10a76f56b54b2  ./script/Xconfigure.sh
-1ba1a6ee7efc9e6a45afa65d824c583a  ./script/autocert.sh
-940b39c8004a94006606b2566ce2194e  ./script/bcld_app.sh
-dde51d30655e011e0a446a88b0a258e3  ./script/bcld_vendor.sh
+6257ca5ef1f37f5a08322cc9a08e61b3  ./script/log_tools.sh
 b121babd8673a6d38330ab59a6d081e1  ./script/chroot.sh
+dde51d30655e011e0a446a88b0a258e3  ./script/bcld_vendor.sh
+32c8cbd36088450bce11f16eb1afc325  ./script/echo_tools.sh
 2b51f6a1e2969d2de917c72ee45768b7  ./script/client_logger.sh
 df6732bf6b392a7cc69200bd58fb31b9  ./script/crosdump_logger.sh
+1ba1a6ee7efc9e6a45afa65d824c583a  ./script/autocert.sh
+940b39c8004a94006606b2566ce2194e  ./script/bcld_app.sh
 136a1935b5d4fd11062a7ba686a98c5d  ./script/docker_run.sh
-32c8cbd36088450bce11f16eb1afc325  ./script/echo_tools.sh
-6016a0192dc8975287b1bdf97c846b7a  ./script/file_operations.sh
-6257ca5ef1f37f5a08322cc9a08e61b3  ./script/log_tools.sh
-a0ad3b8dcdd06327c49632ade4f76658  ./script/rsyslogger.sh
-f954697a6f68e7c25e05e75310080794  ./script/startup.sh
 433a2f4f80224f7c115b47a656b7c57c  ./script/usb_logger.sh
-a12b5aa0f199e22b74a7cb400bb8ffbe  ./test/00_PRE-BUILD.bats
-a9438d8127755ce4b88d174b974bd8fa  ./test/01_PER-BUILD.bats
-a663e4ea0ffd0a9aff999f54d7a9a1d5  ./test/02_POST-BUILD.bats
-e959a8de10c429d8c11cfe5d64a5fe7e  ./test/BCLD-BATS.sh
-13fc6ce9dd7d8170534714cd7a3ccc01  ./test/bcld_test.sh
-3c6d9bad67a59baeb81ef905281f3616  ./test/common-setup
-d17592b1867453e7e203d9d13b2251e4  ./tools/DOCKER-install.sh
-7d874e194ead3b20adcf839a09edc38d  ./tools/EXPORTER-TOOLKIT.sh
-9e24de909dee42e79d45e5a85a78ac76  ./tools/HashGen.sh
-853ffb8a5e4bea6c1b108f07157924c0  ./tools/NEXUS-deploy.sh
-0a430cdd84ba79567389d5440f23a3ba  ./tools/bcld-repo-manager/chrepoman.sh
+f954697a6f68e7c25e05e75310080794  ./script/startup.sh
+6016a0192dc8975287b1bdf97c846b7a  ./script/file_operations.sh
+a0ad3b8dcdd06327c49632ade4f76658  ./script/rsyslogger.sh
 bc8d6f1036b0463c7f1703414b04f691  ./tools/bcld-repo-manager/generate_release.sh
+0a430cdd84ba79567389d5440f23a3ba  ./tools/bcld-repo-manager/chrepoman.sh
 2c29eaacba101e914e4bb3521a6eff84  ./tools/bcld-repo-manager/repository_manager.sh
+58430fdce41cb00a87eb88ebee58fef0  ./README.md
+51ba62d7a7dd97fd4f263c740b11406f  ./CHANGELOG
+77a9103c2abf925fda8dfe8ac8575bdb  ./RepoMan.sh
+bc48c8ed5023b81a6bde232593e5ec47  ./.gitignore
+04aff3cce210e9c2a8f21df593f07b19  ./COPYING
+cc04d3c28306689fde5be96638e22f70  ./LICENSE
+4a6fa59b1c01aecca6b7504953723f01  ./.gitmodules
+5f630c45a220e988d7c6cb643575f3a0  ./Docker-builder.sh
+ea29c0147a158039c0851426ae8acff4  ./ISO-builder.sh
+d221c605820660f1d244c6213e28d08b  ./IMG-builder.sh
+af5b822fbbbbc24308cca6046adb9681  ./test/BCLD-BATS.sh
+13fc6ce9dd7d8170534714cd7a3ccc01  ./test/bcld_test.sh
+c12303174bde6f01a906e5bcd1651345  ./image/ISO/isolinux/isolinux.bin
+49a4210f52e5bcc79077d12c3dfd63f5  ./image/ISO/isolinux/isolinux.cfg
+87ecdd57738b7ed7fe23e3da8a492593  ./image/ISO/README.diskdefines
+13fc6ce9dd7d8170534714cd7a3ccc01  ./test/bcld_test.sh
